package smartparking.model;

/**
 * Estados posibles de una plaza de aparcamiento.
 */
public enum SpotStatus {
    FREE,              // Plaza libre
    OCCUPIED,          // Plaza ocupada
    OUT_OF_SERVICE     // Plaza fuera de servicio
}
